regression/fail/modules.36.sml
signature SIG =
   sig
      include sig type t end where type t = int
   end where type t = bool
